fix design glitch spacing between header parts

--- a/oxygen.css
+++ b/oxygen.css
@@ -10,7 +10,8 @@ html, body, /* Remove this line if integrating */
 .brd pre, .brd code, .brd samp,
 .brd abbr, .brd acronym, .brd address, .brd small, .brd cite,
 .brd span, .brd em, .brd img, .brd strong,
-.brd dl, .brd dt, .brd dd,
+.brd dl, .brd dt, .brd dd, #brd-visit ul, #brd-visit li, #brd-navlinks ul,
+#brd-navlinks li, #brd-desc ul, #brd-desc li,
 .brd form, .brd fieldset, .brd label, .brd legend,
 .brd table, .brd caption, .brd tbody, .brd tfoot, .brd thead,
 .brd tr, .brd th, .brd td {
